[project]
name = "tinypath-py"
version = "1.0.0"
description = "Python implementation of TinyPath, a minimal JSON path expression language for IoT scenarios"
license = { text = "MIT" }
authors = [
    { name = "dcsuibian", email = "dcsuibian@163.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/dcsuibian/tinypath"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinypath"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
